# hubocma

./: hehe
CmaOptimizer/: CmaOptimizer.pro  cmaoptimizer.cpp  cmaoptimizer.h
HpMotion/: BVHMotionData.cpp  BVHMotionData.h  HpMotion.pro  HpMotionMath.cpp  HpMotionMath.h  HuboGearBody.cpp  HuboGearBody.h  HuboGearController.cpp  HuboGearController.h  HuboMotionData.cpp  HuboMotionData.h  HuboVPBody.cpp  HuboVPBody.h  HuboVpController.cpp  HuboVpController.h  HuboVpQpController.cpp  HuboVpQpController.h  IKSolver.cpp  IKSolver.h  Joint.cpp  Joint.h  Motion.cpp  Motion.h  MotionData.cpp  MotionData.h  jointbase.cpp  jointbase.h
HuboCma/: HuboCma.pro  hubobalancemanage.cpp  hubobalancemanage.h  hubobalancemanage.ui  hubobalanceviewer.cpp  hubobalanceviewer.h  hubobalanceviewer.ui  hubocmamanage.cpp  hubocmamanage.h  hubocmamanage.ui  hubocmathread.cpp  hubocmathread.h  huboglviewer.cpp  huboglviewer.h  huboglviewer.ui  (+29 more)
gear/examples/sloop-r13/: CMakeLists.txt  Makefile
gear/examples/sloop-r13/include/: cdfunc.h  datatypedef.h  glsub.h  gsystem_p.h  hexad.h  joint.h  myQuadProg.h  mysystem.h  mysystem_loop_single.h  rigid_body.h  surface_fixed_to_body.h  surface_fixed_to_frame.h  sysdata.h  triad.h
gear/examples/sloop-r13/mesh/: cylinder_rjoint_sloop.tri  octagonal_prism.tri  plane.msh  seesaw_base.tri  sphere.tri1  stairs.msh
gear/examples/sloop-r13/src/: cdfunc.cpp  glsub.cpp  gsystem_p.cpp  joint.cpp  myQuadProg.cpp  mysystem.cpp  mysystem_loop_single.cpp  rigid_body.cpp  sloopviewer.cpp  surface_fixed_to_body.cpp  surface_fixed_to_frame.cpp  sysdata.cpp
(+120 files in other folders)
